@@ -5,6 +5,7 @@ Revision history for WWW-Scraper-ISBN-WHSmith_Driver
         - META updates.
         - added git repository links to metadata.
         - added Data::Dumper to pre-requisites.
+        - updated pattern matching due to page layout changes.
 
 0.04    2012-12-16
         - fixed broken test.
